    IntegerLiteral and LongLiteral inherit from.
    The Java 7 module no longer replaces the Java 4 Literals.ast file,
    instead the Java 7 module only adds the IllegalLiteral class to the
    grammar. The rewrite that was used to specialize numeric literals
    has been removed.
    * Fixed an error that caused numeric literal constructors to
    not properly initialize numeric literals.

2017-11-17  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * The attribute TypeDecl.toString() now returns the typeName() value.
    This makes it easier to debug type analysis code.

2017-11-16  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * The attribute TypeDecl.enclosingMemberDecl() is now defined for
    all member declarations (was previously undefined for fields).

2017-09-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed an error in parse name resolution that caused certain qualified
    names to fail to resolve correctly.
    * Removed the AbstractDot type from the abstract grammar. The Dot type
    replaces any previous use of AbstractDot.  This change simplifies
    the abstract grammar, but it also means that extensions must be updated.
    Extensions should be updated by replacing any use of AbstractDot by Dot.

2017-04-22  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Renamed TypeDecl.enclosingBlock() to enclosingMemberDecl.
    * Added attribute enclosingBlock() in Expr, for computing
    the directly enclosing statement block.
    * Added TypeVariable.firstBound() to compute the first type bound of a
    type variable.

2017-04-21  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Modified the typeName() attribute of WildcardType, WildcardExtendsType,
    and WildcardSuperType to improve readability.
    This removes the "wildcard." prefix.
    * A new AST class has been added: SubstitutedTypeVariable.
    This class represents type variables that should have their type bounds
    substituted. A new NTA list child named SubstTypeParam has been