@@ -126,6 +126,10 @@ aspect ClassfileParser {
       print("\n");
     }
 
+    public final void format(String fmt, Object... args) {
+      print(String.format(fmt, args));
+    }
+
     public final void parseMagic() throws IOException {
       if (next() != 0xca || next() != 0xfe || next() != 0xba || next() != 0xbe) {
         error("magic error");
