@@ -1,4 +1,5 @@
 /* Copyright (c) 2005-2008, Torbjorn Ekman
+ *               2011-2017  Jesper Öqvist <jesper.oqvist@cs.lth.se>
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -29,291 +30,81 @@
  */
 
 aspect Constant {
-  class Constant {
+  public class Constant {
     static class ConstantInt extends Constant {
       private int value;
-
-      public ConstantInt(int i) {
-        this.value = i;
-      }
-
-      @Override
-      int intValue() {
-        return value;
-      }
-
-      @Override
-      long longValue() {
-        return value;
-      }
-
-      @Override
-      float floatValue() {
-        return value;
-      }
-
-      @Override
-      double doubleValue() {
-        return value;
-      }
-
-      @Override
-      String stringValue() {
-        return new Integer(value).toString();
-      }
-
-      @Override
-      Literal buildLiteral() {
-        return new IntegerLiteral(stringValue());
-      }
+      public ConstantInt(int i) { this.value = i; }
+      @Override public int intValue() { return value; }
+      @Override public long longValue() { return value; }
+      @Override public float floatValue() { return value; }
+      @Override public double doubleValue() { return value; }
+      @Override public String stringValue() { return new Integer(value).toString(); }
     }
     static class ConstantLong extends Constant {
       private long value;
-
-      public ConstantLong(long l) {
-        this.value = l;
-      }
-
-      @Override
-      int intValue() {
-        return (int)value;
-      }
-
-      @Override
-      long longValue() {
-        return value;
-      }
-
-      @Override
-      float floatValue() {
-        return value;
-      }
-
-      @Override
-      double doubleValue() {
-        return value;
-      }
-
-      @Override
-      String stringValue() {
-        return new Long(value).toString();
-      }
-
-      @Override
-      Literal buildLiteral() {
-        return new LongLiteral(stringValue());
-      }
+      public ConstantLong(long l) { this.value = l; }
+      @Override public int intValue() { return (int)value; }
+      @Override public long longValue() { return value; }
+      @Override public float floatValue() { return value; }
+      @Override public double doubleValue() { return value; }
+      @Override public String stringValue() { return new Long(value).toString(); }
     }
     static class ConstantFloat extends Constant {
       private float value;
-
-      public ConstantFloat(float f) {
-        this.value = f;
-      }
-
-      @Override
-      int intValue() {
-        return (int)value;
-      }
-
-      @Override
-      long longValue() {
-        return (long)value;
-      }
-
-      @Override
-      float floatValue() {
-        return value;
-      }
-
-      @Override
-      double doubleValue() {
-        return value;
-      }
-
-      @Override
-      String stringValue() {
-        return new Float(value).toString();
-      }
-
-      @Override
-      Literal buildLiteral() {
-        return new FloatingPointLiteral(stringValue());
-      }
+      public ConstantFloat(float f) { this.value = f; }
+      @Override public int intValue() { return (int)value; }
+      @Override public long longValue() { return (long)value; }
+      @Override public float floatValue() { return value; }
+      @Override public double doubleValue() { return value; }
+      @Override public String stringValue() { return new Float(value).toString(); }
     }
     static class ConstantDouble extends Constant {
       private double value;
-
-      public ConstantDouble(double d) {
-        this.value = d;
-      }
-
-      @Override
-      int intValue() {
-        return (int)value;
-      }
-
-      @Override
-      long longValue() {
-        return (long)value;
-      }
-
-      @Override
-      float floatValue() {
-        return (float)value;
-      }
-
-      @Override
-      double doubleValue() {
-        return value;
-      }
-
-      @Override
-      String stringValue() {
-        return new Double(value).toString();
-      }
-
-      @Override
-      Literal buildLiteral() {
-        return new DoubleLiteral(stringValue());
-      }
+      public ConstantDouble(double d) { this.value = d; }
+      @Override public int intValue() { return (int)value; }
+      @Override public long longValue() { return (long)value; }
+      @Override public float floatValue() { return (float)value; }
+      @Override public double doubleValue() { return value; }
+      @Override public String stringValue() { return new Double(value).toString(); }
     }
     static class ConstantChar extends Constant {
       private char value;
-
-      public ConstantChar(char c) {
-        this.value = c;
-      }
-
-      @Override
-      int intValue() {
-        return value;
-      }
-
-      @Override
-      long longValue() {
-        return value;
-      }
-
-      @Override
-      float floatValue() {
-        return value;
-      }
-
-      @Override
-      double doubleValue() {
-        return value;
-      }
-
-      @Override
-      String stringValue() {
-        return new Character(value).toString();
-      }
-
-      @Override
-      Literal buildLiteral() {
-        return new CharacterLiteral(stringValue());
-      }
+      public ConstantChar(char c) { this.value = c; }
+      @Override public int intValue() { return value; }
+      @Override public long longValue() { return value; }
+      @Override public float floatValue() { return value; }
+      @Override public double doubleValue() { return value; }
+      @Override public String stringValue() { return new Character(value).toString(); }
     }
     static class ConstantBoolean extends Constant {
       private boolean value;
-
-      public ConstantBoolean(boolean b) {
-        this.value = b;
-      }
-
-      @Override
-      boolean booleanValue() {
-        return value;
-      }
-
-      @Override
-      String stringValue() {
-        return new Boolean(value).toString();
-      }
-
-      @Override
-      Literal buildLiteral() {
-        return new BooleanLiteral(stringValue());
-      }
+      public ConstantBoolean(boolean b) { this.value = b; }
+      @Override public boolean booleanValue() { return value; }
+      @Override public String stringValue() { return new Boolean(value).toString(); }
     }
     static class ConstantString extends Constant {
       private String value;
-      public ConstantString(String s) {
-        this.value = s;
-      }
-
-      @Override
-      String stringValue() {
-        return value;
-      }
-
-      @Override
-      Literal buildLiteral() {
-        return new StringLiteral(stringValue());
-      }
+      public ConstantString(String s) { this.value = s; }
+      @Override public String stringValue() { return value; }
     }
 
+    public int intValue() { throw new UnsupportedOperationException(); }
+    public long longValue() { throw new UnsupportedOperationException(); }
+    public float floatValue() { throw new UnsupportedOperationException(); }
+    public double doubleValue() { throw new UnsupportedOperationException(); }
+    public boolean booleanValue() { throw new UnsupportedOperationException(getClass().getName()); }
+    public String stringValue() { throw new UnsupportedOperationException(); }
 
-    int intValue() {
-      throw new UnsupportedOperationException();
-    }
-
-    long longValue() {
-      throw new UnsupportedOperationException();
-    }
-
-    float floatValue() {
-      throw new UnsupportedOperationException();
-    }
-
-    double doubleValue() {
-      throw new UnsupportedOperationException();
-    }
-
-    boolean booleanValue() {
-      throw new UnsupportedOperationException(getClass().getName());
-    }
-
-    String stringValue() {
-      throw new UnsupportedOperationException();
-    }
-
-    Literal buildLiteral() {
-      throw new UnsupportedOperationException();
-    }
-
-    protected Constant() {
-    }
+    protected Constant() { }
 
     public boolean error = false;
 
-    static Constant create(int i) {
-      return new ConstantInt(i);
-    }
-
-    static Constant create(long l) {
-      return new ConstantLong(l);
-    }
-
-    static Constant create(float f) {
-      return new ConstantFloat(f);
-    }
-
-    static Constant create(double d) {
-      return new ConstantDouble(d);
-    }
-
-    static Constant create(boolean b) {
-      return new ConstantBoolean(b);
-    }
-
-    static Constant create(char c) {
-      return new ConstantChar(c);
-    }
-
-    static Constant create(String s) {
-      return new ConstantString(s);
-    }
+    static Constant create(int i) { return new ConstantInt(i); }
+    static Constant create(long l) { return new ConstantLong(l); }
+    static Constant create(float f) { return new ConstantFloat(f); }
+    static Constant create(double d) { return new ConstantDouble(d); }
+    static Constant create(boolean b) { return new ConstantBoolean(b); }
+    static Constant create(char c) { return new ConstantChar(c); }
+    static Constant create(String s) { return new ConstantString(s); }
   }
 }
