@@ -59,7 +59,6 @@
 				<exclude name="BytecodeAttributes.jrag"/>
 				<exclude name="BytecodeDescriptor.jrag"/>
 				<exclude name="BytecodeReader.jrag"/>
-				<exclude name="Constant.jadd"/>
 				<exclude name="Literals.jrag"/>
 				<exclude name="Variable.jadd"/>
 			</fileset>
@@ -127,7 +126,6 @@
 				<exclude name="BytecodeAttributes.jrag"/>
 				<exclude name="BytecodeDescriptor.jrag"/>
 				<exclude name="BytecodeReader.jrag"/>
-				<exclude name="Constant.jadd"/>
 				<exclude name="Literals.jrag"/>
 				<exclude name="Variable.jadd"/>
 			</fileset>
