@@ -14,7 +14,6 @@ module("java7 frontend") {
 
 		excludeFrom "java4 frontend", "grammar/CatchClause.ast"
 		excludeFrom "java4 frontend", "frontend/Literals.jrag"
-		excludeFrom "java4 frontend", "frontend/Constant.jadd"
 		excludeFrom "java4 frontend", "frontend/Variable.jadd"
 	}
 
