@@ -57,16 +57,12 @@
 			<fileset dir="${java8.dir}/frontend">
 				<include name="Variable.jadd"/>
 			</fileset>
-			<fileset dir="${java7.dir}/frontend">
-				<include name="Constant.jadd"/>
-			</fileset>
 			<fileset dir="${java4.dir}/frontend">
 				<include name="*.jrag"/>
 				<include name="*.jadd"/>
 				<exclude name="BytecodeAttributes.jrag"/>
 				<exclude name="BytecodeDescriptor.jrag"/>
 				<exclude name="BytecodeReader.jrag"/>
-				<exclude name="Constant.jadd"/>
 				<exclude name="Literals.jrag"/>
 				<exclude name="Variable.jadd"/>
 			</fileset>
@@ -93,7 +89,6 @@
 			<fileset dir="${java7.dir}/frontend">
 				<include name="*.jrag"/>
 				<include name="*.jadd"/>
-				<exclude name="Constant.jadd"/>
 				<exclude name="Variable.jadd"/>
 			</fileset>
 			<fileset dir="${java8.dir}/frontend">
@@ -144,16 +139,12 @@
 			<fileset dir="${java8.dir}/frontend">
 				<include name="Variable.jadd"/>
 			</fileset>
-			<fileset dir="${java7.dir}/frontend">
-				<include name="Constant.jadd"/>
-			</fileset>
 			<fileset dir="${java4.dir}/frontend">
 				<include name="*.jrag"/>
 				<include name="*.jadd"/>
 				<exclude name="BytecodeAttributes.jrag"/>
 				<exclude name="BytecodeDescriptor.jrag"/>
 				<exclude name="BytecodeReader.jrag"/>
-				<exclude name="Constant.jadd"/>
 				<exclude name="Literals.jrag"/>
 				<exclude name="Variable.jadd"/>
 			</fileset>
@@ -183,7 +174,6 @@
 			<fileset dir="${java7.dir}/frontend">
 				<include name="*.jrag"/>
 				<include name="*.jadd"/>
-				<exclude name="Constant.jadd"/>
 				<exclude name="Variable.jadd"/>
 			</fileset>
 			<fileset dir="${java7.dir}/backend">
