@@ -9,6 +9,8 @@
     has been removed.
     * Fixed an error that caused numeric literal constructors to
     not properly initialize numeric literals.
+    * Removed java7/frontend/Constant.jadd (replaced by
+    java4/frontend/Constant.jadd).
 
 2017-11-17  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
